--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,35 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Assignment Starter</title>
+  <title>Flex GridLayout</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./stylesheets/main.css">
 </head>
 
 <body>
-  <!--  Your HTML goes here-->
-  <h1>Welcome to WEB 1400!!!!!</h1>
+  <header>
+    Lorem ipsum dolor, sit amet consectetur
+  </header>
+  <nav>
+    <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftheoutline.com%2Fpost%2F4186%2Fflip-phone-revival-trend&psig=AOvVaw1LEELEVnUShsaIoT1Cs5rY&ust=1754492798053000&source=images&cd=vfe&opi=89978449&ved=0CBYQjRxqFwoTCLjny6-G9I4DFQAAAAAdAAAAABAE">Link1</a>
+    <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fsunbeamwireless.com%2Fproduct%2Ff1-horizon-wren-classic-flip-phone-with-hotspot%2F&psig=AOvVaw1LEELEVnUShsaIoT1Cs5rY&ust=1754492798053000&source=images&cd=vfe&opi=89978449&ved=0CBYQjRxqFwoTCLjny6-G9I4DFQAAAAAdAAAAABAL">Link1</a>
+  </nav>
+  <main>
+    <aside><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quae exercitationem dolor neque esse consectetur. Dolor sapiente eius, iste laboriosam dignissimos ipsum vero magnam architecto voluptates nemo repellat tenetur placeat nulla fugit dolore voluptas repudiandae tempore. Iure hic placeat aliquam vero fugiat omnis amet quas ut blanditiis sunt ea tempora modi aspernatur rem maxime, adipisci ducimus ab ex neque! Quasi odio debitis repudiandae et nam, nemo sunt aliquam dignissimos voluptas vel molestiae veniam blanditiis veritatis facilis harum? Ab, necessitatibus. Nam?
+    </p> </aside>
+    <article>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dignissimos similique id corporis cupiditate consequatur, ipsum quidem adipisci voluptas aliquid impedit tempora at eum mollitia eius saepe ducimus commodi dolorum.
+    </article>
+    <article>
+      <img src="images/20180417-JsfTJ1Mx0cE89vzkToZS.avif" alt="Pink Phone">
+    </article>
+    <article>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, enim ad nisi deserunt aspernatur doloremque ab est rem, minus esse maiores suscipit qui provident perspiciatis, sunt ducimus nemo sapiente rerum?
+    </article>
+ </main>
+  <footer>
+    Lorem ipsum dolor, sit amet consectetur
+  </footer>
 <script type="module" src="./javascripts/main.js"></script>
 </body>
 </html>
